--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@
 
   --bg-gradient-onyx: linear-gradient(
     to bottom right, 
-    hsl(240, 1%, 25%) 3%, 
+    hsl(240, 1%, 25%) 3%,
     hsl(0, 0%, 19%) 97%
   );
   --bg-gradient-jet: linear-gradient(
@@ -292,6 +292,10 @@ article.active {
   z-index: -1;
 }
 
+.avatar-box { border-radius: 30px; }
+
+.avatar-box img { width: 120px;
+  border-radius: inherit}
 
 
 
